			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01p: *********************************

IMP: (9/15/04, GVG) Improvement in List Geometry on Network

IMP/MAN: (9/15/04, GVG) Adding option to disconnect DRC area checking

************************* Version 8.01o: *********************************

BUG: (9/15/04, JKG) Fixed changing transistor sizes/mirror etc from GetInfo dialog

IMP/MAN: (9/15/04, JKG) Add Tool -> Logical Effort -> Clear LE Sizes on node
     to delete LE sizes on a node.

IMP: (9/15/04, SMR) "Change" dialog always goes to currently selected cell, even
     if it is in a different library.

IMP: (9/15/04, SMR) Reading HSpice output now handles "x" in names better.

IMP: (9/15/04, SMR) When changes are disallowed, "Cancel" option is offered.

BUG: (9/15/04, SMR) Export names STILL don't array in the right order.
FIX: ExportChanges.reExportPorts must take a map to the original Exports, not a List.

BUG: (9/15/04, SMR) Copying and pasting cell text doesn't work.
FIX: Clipboard updated to handle Highlights instead of Geometrics.

IMP: (9/15/04, SMR) "Text Properties" dialog on cell instance names doesn't allow changes.

IMP/MAN: (9/15/04, JKG) Added "File->Force Quit (and Save) " to kill Electric

IMP: (9/14/04, SMR) Can now print waveform windows.

IMP/MAN: (9/14/04, SMR) Added "Eagle", "Pads", and "ECAD" netlist output.

************************* Version 8.01n: *********************************

BUG (9/14/04, RK) NCC assertion fails when designs being compared share a cell.

BUG: (9/14/04, RK) NCC doesn't print Cell version number. 

BUG: (9/13/04, SMR) Spice output gets indexed names wrong.
FIX: In tool.io.output.Spice, do not use aggregated names (an interface option in tool.io.output.Topology).

IMP: (9/13/04, GVG) DRC will highligh Geometric instead of Poly whenenver is possible

BUG: (9/13/04, SMR) Extracting cells doesn't handle mirroring right.